# online-mart

./: compose.yaml
inventory_service/: .env  Dockerfile.dev
inventory_service/app/: database.py  main.py  models.py  settings.py
inventory_service/app/crud/: inventory_crud.py
inventory_service/app/kafka/consumers/: inventory_consumer.py
notification_service/: .env  Dockerfile.dev
notification_service/app/: main.py  settings.py
notification_service/app/crud/: order_crud.py
notification_service/app/email/: email_sender.py
notification_service/app/kafka/consumers/: order_consumer.py
notification_service/app/kafka/producers/: order_producer.py
order_service/: .env  Dockerfile.dev  product.proto
order_service/app/: main.py  models.py  settings.py
order_service/app/crud/: order_crud.py
order_service/app/kafka/consumers/: order_consumer.py
order_service/app/kafka/producers/: order_producer.py  payment_producer.py
payment_service/: .env  Dockerfile.dev  pyproject.toml
payment_service/app/: database.py  main.py  models.py  settings.py
payment_service/app/crud/: payment_crud.py
payment_service/app/kafka/consumers/: order_response_consumer.py
product_service/: .env  Dockerfile.dev  product_pb2.py  pyproject.toml
product_service/app/: main.py  models.py  settings.py
product_service/app/crud/: product.py
user_service/: .env  Dockerfile.dev  pyproject.toml
user_service/app/: database.py  main.py  models.py  settings.py
user_service/app/kafka/consumers/: user_consumer.py
user_service/app/kafka/producers/: user_producer.py
(+3 files in other folders)
