[tool.poetry]
name = "product_service"
version = "0.1.0"
description = ""
authors = ["Ahmed <exa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.18"

aiokafka = "^0.10.0"
psycopg2 = "^2.9.6"
protobuf = "^5.27.3"
grpcio = "^1.65.5"
grpcio-tools = "^1.65.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"